# rust-tui-audio

./: Cargo.toml  README.md
src/: app.rs  data_buffer.rs  main.rs  ui.rs
src/ui/: wave_widget.rs
