[package]
name = "tui-audio"
version = "0.1.0"
authors = ["Jeff VanDyke <jeff.vandyke@vibrationresearch.com>"]
edition = "2018"

[dependencies]
tui = { version = "0.5", default-features = false, features = ["crossterm"] }
crossterm = "0.9"
cpal = "0.8"

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
wavy = "0.1"
